--- a/lilybyred/assets/style/common.css
+++ b/lilybyred/assets/style/common.css
@@ -11,14 +11,15 @@
     --font-pc-ko:"Noto Sans KR","Noto Sans",-apple-system, BlinkMacSystemFont, "Malgun Gothic", "맑은 고딕", helvetica, "Apple SD Gothic Neo", sans-serif;
     --font-pc-en:"Noto Sans",-apple-system, BlinkMacSystemFont, "Helvetica Neue","Apple SD Gothic Neo", Arial, sans-serif;
     
-    /* 폰트 크기 설정 */ 
+    /* 폰트 크기 설정 */
     --font-m-xlg: 25px;
     --font-m-lg: 20px;
     --font-m-md: 16px;
     --font-m-sm: 14px;
     
+    --font-pc-xlg: 30px;
     --font-pc-lg: 24px;
-    --font-pc-md: 16px;
+    --font-pc-md: 18px;
     --font-pc-sm: 13px;
 
     /* 폰트 두께 */
