--- a/lilybyred/m-brand.css
+++ b/lilybyred/m-brand.css
@@ -13,7 +13,7 @@ body {
   font-family: var(--font-m-en);
   font-weight: var(--font-bold);
   background: url(./images/brand-main-backgroundimg.png) no-repeat 50% 55% / 303px 318px,
-    url(./images/footer-grid.png) no-repeat 50% / cover, var(--color-primary);
+    url(./images/brand-grid-mobile.png) no-repeat 50% / cover, var(--color-primary);
   position: relative;
   overflow: hidden;
 }
