--- a/lilybyred/m-index.css
+++ b/lilybyred/m-index.css
@@ -104,7 +104,7 @@
   animation-delay: 3s;
 }
 
-/*- 릴리바이레드 핑크색 -*/
+/*- 클릭앤드랙그 핑크색 -*/
 .main-page-wrapper .brand-name-box::after {
   content: "Click And Drag!";
   background-color: var(--color-main-pink);
@@ -114,7 +114,7 @@
   width: 250px;
   position: absolute;
   top: 43%;
-  left: 35%;
+  left: 34.5%;
   transform: translate(-44%, -35%) rotate(-3deg);
   z-index: 1;
   animation: moving-box .3s 1s 1 linear;
@@ -327,7 +327,7 @@
   width: 100%;
   top: 0; left: 0;
 }
-/* pc용 박스 이미지 display:none 처리 */
+/*- pc용 박스 이미지 display:none 처리 -*/
 .brand-intro-wrapper .slide-wrapper .family-site-box .pc-brand-box {
   display: none;
 }
@@ -497,6 +497,7 @@
 .best-wrapper {
   text-align: center;
   margin: 70px auto;
+  padding: 0 30px;
   max-width: 390px;
 }
 /*- 베스트셀러 텍스트 박스 -*/
@@ -550,6 +551,7 @@
 .insta-wrapper {
   max-width: 390px;
   margin: 0 auto;
+  padding: 0 30px;
 }
 .insta-wrapper .insta-text-box {
   padding-top: 50px;
