--- a/lilybyred/assets/style/global.css
+++ b/lilybyred/assets/style/global.css
@@ -2,7 +2,7 @@
 
 body {
   font-family: var(--font-m-ko);
-  cursor: url(../../images/cursor-heart.png);
+  cursor: url(../../images/cursor-heart.png), pointer;
 }
 
 section {
